@@ -1,3 +1,7 @@
+Thu Aug 31 16:08:00 BST 2000 Olly Betts
+
+	* Added tests for NEAR/PHRASE distributing over sub-expressions.
+
 Thu Aug 31 15:43:07 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Sorted out some of the enum bits in OmIndexer
